# wallpapersc

./: Cargo.toml  default.nix  shell.nix
src/: desktop.rs  gpu.rs  main.rs  shader.wgsl
