[package]
name = "colouncher"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
env_logger = "0.11.8"
eyre = "0.6.12"
freedesktop-file-parser = "0.3.1"
freedesktop-icons = "0.4.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = "0.4.29"
palette = "0.7.6"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
sd-notify = "0.4.5"
smithay-client-toolkit = "0.20.0"
wayland-backend = { version = "0.3.0", features = ["client_system"] }
wayland-client = "0.31.11"
wgpu = { version = "28.0.0", default-features = false, features = [
    "std",
    "vulkan",
    "wgsl",
] }

[profile.dev]
opt-level = 1

[profile.release]
debug = "line-tables-only"
